basic dropdown element created closes #9

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,3 +1,5 @@
+
+
 .App {
   text-align: center;
 }
@@ -36,4 +38,11 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.select{
+  height: min-content;
+}
+.pointer{
+  cursor: pointer;
 }
