--- a/my-app/src/components/Dropdown/style.scss
+++ b/my-app/src/components/Dropdown/style.scss
@@ -11,10 +11,10 @@
         padding: 0 ;
         bottom: 0;
         left: 50%;
-        max-height: 200px;
+        max-height:300px;
         background-color: white;
         transform: translate(-50%,110%);
-
+        overflow-y: auto;
        
     } 
     
